fix sidebar alignment and unify figure captions

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -17,9 +17,9 @@
 }
 
 #sidebar {
-  margin: 45px 25px 25px 25px;
+  margin: 25px;
   font-size: 15px;
-  padding-top: 240px;
+  padding-top: 255px;
   padding-left: 55px;
   width: 300px;
   height: 100%;
@@ -68,174 +68,24 @@
   color: rgb(50, 50, 50);
 }
 
-/* shared image + caption component */
+/* shared figure */
 
-figure {
+.page-figure,
+.research-figure {
   margin: 0;
 }
 
-figure img {
+.page-figure img,
+.research-figure img {
   width: 100%;
   display: block;
-  margin-bottom: 0;
 }
 
-figcaption,
-.imgcap {
+.page-figure figcaption,
+.research-figure figcaption {
   color: rgb(85, 85, 85);
   font-size: 12px;
   line-height: 1.5;
   margin-top: 4px;
   margin-bottom: 0.9em;
-}
-
-/* nav-toggle */
-
-#nav-toggle {
-  display: none;
-  position: fixed;
-  top: 25px;
-  right: 25px;
-  height: 32px;
-  z-index: 400;
-}
-
-#nav-toggle > div {
-  position: relative;
-  width: 32px;
-}
-
-#nav-toggle span {
-  width: 100%;
-  height: 2px;
-  left: 0;
-  display: block;
-  background: #333;
-  position: absolute;
-  transition: .35s ease-in-out;
-}
-
-#nav-toggle span:nth-child(1) {
-  top: 0;
-}
-
-#nav-toggle span:nth-child(2) {
-  top: 11px;
-}
-
-#nav-toggle span:nth-child(3) {
-  top: 22px;
-}
-
-#overlay {
-  display: none;
-  position: fixed;
-  background: rgba(0,0,0,.6);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-@media screen and (max-width: 1150px) {
-  #global-head {
-    padding-top: 40px;
-    padding-left: 60px;
-    padding-right: 30px;
-  }
-
-  #sidebar {
-    margin: 30px 10px 10px 10px;
-    padding-top: 240px;
-    padding-left: 50px;
-  }
-}
-
-@media screen and (max-width: 1050px) {
-  #global-head {
-    padding-top: 20px;
-    padding-left: 40px;
-    padding-right: 20px;
-  }
-
-  #sidebar {
-    margin: 20px 0 0 0;
-    padding-top: 220px;
-    padding-left: 40px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  #global-head {
-    width: 100%;
-    padding: 25px;
-    background: rgba(255,255,255);
-    line-height: 10px;
-  }
-
-  #global-head p {
-    color: rgb(85, 85, 85);
-    font-size: 12px;
-  }
-
-  #sidebar {
-    position: fixed;
-    padding-top: 100px;
-    right: -300px;
-    top: 0;
-    height: 100%;
-    width: 270px;
-    color: #333;
-    background: #fff;
-    transition: .35s ease-in-out;
-    z-index: 300;
-    margin: 0;
-  }
-
-  #nav-toggle {
-    display: block;
-    margin: 20px 25px 25px auto;
-  }
-
-  .open {
-    overflow: hidden;
-  }
-
-  .open #overlay {
-    display: block;
-    z-index: 200;
-  }
-
-  .open #sidebar {
-    transform: translate3d(-300px,0,0);
-  }
-
-  .open #nav-toggle span:nth-child(1) {
-    top: 11px;
-    transform: rotate(45deg);
-  }
-
-  .open #nav-toggle span:nth-child(2) {
-    width: 0;
-    left: 50%;
-  }
-
-  .open #nav-toggle span:nth-child(3) {
-    top: 11px;
-    transform: rotate(-45deg);
-  }
-}
-
-@media screen and (max-width: 400px) {
-  #sidebar {
-    right: -200px;
-    width: 200px;
-    padding-top: 60px;
-  }
-
-  .open #sidebar {
-    transform: translate3d(-200px,0,0);
-  }
 }
